--- a/tarea_oral.ipynb
+++ b/tarea_oral.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "metodo para eliminar tareas"
+    "usamos el metodo para eliminar tareas"
    ]
   },
   {
